# action-provider

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  mypy.ini  pyproject.toml  run_server.sh  test_input.json  tox.ini
.github/workflows/: deploy_lambdas.yml
aws/: action-status.py  action_introspect.py  funcx-globus-auth.py  funcx-run.py  requirements.txt
example/: deploy_example_flow.py
examples/: README.md  deploy_example_flow.py  einput2.json  example_flow.json  example_input_schema.json  flow2.json  globus_automate_flow.py  input2.json
funcx_action_provider/: README.md  config.py  login_manager.py  logs.py  provider.py  task_input.py  util.py
provider/: __init__.py  config.py  logs.py  provider.py  schema.py  util.py
slim-parsl/: requirements.txt  setup.py
tests/: test_task_input.py  test_util.py
